--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="/Users/d3/Desktop/QrcodeApp/images/app_icon.png" alt="App Logo">
+              <!--url will auto take image -->
+                <img src="images/app_icon.png" alt="App Logo">
             </div>
             <h1>QR Code Generator</h1>
             <p class="subtitle">Create and Print QR Codes Instantly</p>
