--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
             text-align: center;
         }
 
-        .logo {
-            width: 70px;
-            height: 70px;
-            padding: 10px;
-            background: #F5F5F5;
-            border-radius: 15px;
-        }
+        .banner {
+    width: 100%;
+    max-height: 80px; /* reduced from 120px */
+    overflow: hidden;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
 
-        .logo img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+.banner img {
+    width: auto;       /* maintain original aspect ratio */
+    height: 80px;      /* match max-height */
+    object-fit: contain; /* show full logo without cropping */
+}
+
 
         h1 {
             color: #008F90;
             font-size: 28px;
             font-weight: 400;
-            margin-bottom: 5px;
         }
 
         .subtitle {
@@ -167,7 +167,7 @@
                 margin-bottom: 20px;
             }
 
-            .logo, h1, .subtitle {
+            .banner, h1, .subtitle {
                 display: block;
                 text-align: center;
             }
@@ -177,9 +177,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">
-              <!--url will auto take image -->
-                <img src="images/app_icon.png" alt="App Logo">
+            <div class="banner">
+                <img src="images/app_logo.png" alt="App Logo">
             </div>
             <h1>QR Code Generator</h1>
             <p class="subtitle">Create and Print QR Codes Instantly</p>
